--- a/style/galeria.css
+++ b/style/galeria.css
@@ -2,7 +2,8 @@
 * {
   padding: 0px;
   margin: 0px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 /* inicio css header nav */
@@ -17,9 +18,16 @@
 }
 
 header a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: wrap row;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: wrap row;
+          flex-flow: wrap row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 header nav {
@@ -27,9 +35,16 @@ header nav {
 }
 
 nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: wrap row;
-  justify-content: space-evenly;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: wrap row;
+          flex-flow: wrap row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 nav ul li {
@@ -62,13 +77,18 @@ nav a:hover {
   height: 100vh;
   width: 100%;
   background-color: #262525;
+  display: -ms-grid;
   display: grid;
   padding: 25px;
   grid-gap: 15px;
 }
 
 .foto1 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1/3;
   background-image: url(../media/img/IMG_8844.JPG);
   background-size: cover;
@@ -76,7 +96,11 @@ nav a:hover {
 }
 
 .foto2 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
   grid-column: 3/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1/3;
   background-image: url(../media/img/IMG_3476.JPG);
   background-size: cover;
@@ -84,7 +108,11 @@ nav a:hover {
 }
 
 .foto3 {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
   grid-column: 4/5;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1/3;
   background-image: url(../media/img/IMG_2345.JPG);
   background-size: cover;
@@ -92,7 +120,11 @@ nav a:hover {
 }
 
 .foto4 {
+  -ms-grid-column: 5;
+  -ms-grid-column-span: 1;
   grid-column: 5/6;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1/3;
   background-image: url(../media/img/IMG_9234.JPG);
   background-size: cover;
@@ -100,7 +132,11 @@ nav a:hover {
 }
 
 .foto5 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
   grid-column: 1/4;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 2;
   grid-row: 3/5;
   background-image: url(../media/img/IMG_3733.JPG);
   background-size: cover;
@@ -108,7 +144,11 @@ nav a:hover {
 }
 
 .foto6 {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 2;
   grid-column: 4/6;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 2;
   grid-row: 3/5;
   background-image: url(../media/img/IMG_2543.JPG);
   background-size: cover;
@@ -128,8 +168,10 @@ nav a:hover {
   width: 95%;
   max-width: 100%;
   margin: auto;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
   padding: 5px 10px;
 }
@@ -140,16 +182,32 @@ nav a:hover {
 }
 
 .foot .cajaDatos .cajaDatos1 .datos {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: wrap row;
-  justify-content: left;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: wrap row;
+          flex-flow: wrap row;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
   margin-top: -16px;
 }
 
 .foot .cajaIco {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: wrap row;
-  justify-content: right;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: wrap row;
+          flex-flow: wrap row;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
   grid-column: 3/4;
 }
 
@@ -163,6 +221,8 @@ nav a:hover {
   text-align: center;
   padding: 5px 0px;
   color: #fff;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2/3;
   font-size: 17px;
   margin-bottom: -15px;
@@ -177,96 +237,107 @@ nav a:hover {
   .headerOficial {
     height: 170px;
   }
-
   header a img {
     width: 440px;
     height: 110px;
   }
-
   /* inicio media query header */
   #logo {
     height: 60%;
     padding-top: 15px;
   }
-
   nav ul {
     padding-top: 5px;
   }
-
   /* inicio media query main */
   .mainGaleria {
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    -ms-grid-columns: (1fr)[5];
+        grid-template-columns: repeat(5, 1fr);
+    -ms-grid-rows: (1fr)[4];
+        grid-template-rows: repeat(4, 1fr);
   }
-
   .foto1 {
     background-position-x: 500px;
   }
-
   .foto3 {
     background-position: initial;
   }
-
   .foto2 {
     background-image: url(../media/img/IMG_9710.JPG);
     background-position: top;
   }
-
   .foto4 {
     background-position-x: 470px;
   }
-
   /* fin media query main */
   /* inicio media query footer */
   .foot .cajaIco {
+    display: -ms-grid;
     display: grid;
-    flex-flow: wrap row;
-    justify-content: right;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: wrap row;
+            flex-flow: wrap row;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
   }
-
   .foot .cajaDatos .cajaCopy {
     padding-top: 15px;
     font-size: 14px;
   }
-
   /* fin media query footer */
 }
+
 @media only screen and (max-width: 930px) {
   /* inicio media query header */
   .headerOficial {
+    display: -ms-grid;
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
     height: auto;
   }
-
   #logo {
     width: 100%;
     padding-top: 15px;
     padding-right: 30px;
   }
-
   nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: wrap row;
-    justify-content: space-evenly;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: wrap row;
+            flex-flow: wrap row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     padding-top: 15px;
     padding-right: 20px;
   }
-
   /* fin media query header */
   /* inicio media query main */
   .mainGaleria {
     height: 280vh;
     width: 100%;
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: 0fr 1fr 0fr;
-    grid-template-rows: repeat(12, 1fr);
+    -ms-grid-columns: 0fr 1fr 0fr;
+        grid-template-columns: 0fr 1fr 0fr;
+    -ms-grid-rows: (1fr)[12];
+        grid-template-rows: repeat(12, 1fr);
     padding: 10px;
   }
-
   .foto1 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
     grid-row: 1/3;
     background-image: url(../media/img/IMG_8844.JPG);
     background-size: cover;
@@ -275,9 +346,12 @@ nav a:hover {
     background-size: 700px 450px;
     background-repeat: no-repeat;
   }
-
   .foto2 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 2;
     grid-row: 3/5;
     background-image: url(../media/img/IMG_3476.JPG);
     background-size: cover;
@@ -285,9 +359,12 @@ nav a:hover {
     background-size: 700px 450px;
     background-repeat: no-repeat;
   }
-
   .foto3 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 2;
     grid-row: 5/7;
     background-image: url(../media/img/IMG_1932.jpg);
     background-size: cover;
@@ -295,9 +372,12 @@ nav a:hover {
     background-size: 700px 450px;
     background-repeat: no-repeat;
   }
-
   .foto4 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 7;
+    -ms-grid-row-span: 2;
     grid-row: 7/9;
     background-image: url(../media/img/IMG_9234.JPG);
     background-size: cover;
@@ -305,9 +385,12 @@ nav a:hover {
     background-size: 700px 450px;
     background-repeat: no-repeat;
   }
-
   .foto5 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 9;
+    -ms-grid-row-span: 2;
     grid-row: 9/11;
     background-image: url(../media/img/IMG_3733.JPG);
     background-size: cover;
@@ -315,9 +398,12 @@ nav a:hover {
     background-size: 700px 450px;
     background-repeat: no-repeat;
   }
-
   .foto6 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 11;
+    -ms-grid-row-span: 2;
     grid-row: 11/13;
     background-image: url(../media/img/IMG_2543.JPG);
     background-size: cover;
@@ -325,78 +411,83 @@ nav a:hover {
     background-size: 700px 450px;
     background-repeat: no-repeat;
   }
-
   /* fin media query main */
   /*inicio footer query  */
   .foot .cajaDatos {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: wrap column;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: wrap column;
+            flex-flow: wrap column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-
   .foot .cajaDatos .cajaDatos1 {
     text-align: center;
   }
-
   .foot .cajaDatos .cajaDatos1 .nombre {
     margin-right: 5px;
   }
-
   .foot .cajaDatos .cajaDatos1 .datos {
     padding-top: 5px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: wrap column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: wrap column;
+            flex-flow: wrap column;
   }
-
   .cajaDatos .cajaDatos1 p a {
     margin-right: 0px !important;
   }
-
   .foot .cajaDatos .cajaIco {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-top: 15px;
   }
-
   .foot .cajaDatos .cajaCopy {
     padding-top: 10px;
     font-size: 13px;
   }
-
   /* fin query footer */
 }
+
 @media only screen and (max-width: 485px) {
   /* inicio media query header */
   html, body {
     max-width: 100% !important;
     overflow-x: hidden !important;
   }
-
   .headerOficial {
     display: block;
   }
-
   nav {
     display: none;
   }
-
   nav ul li a {
     display: none;
   }
-
   header a {
     display: none;
   }
-
   .navbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
-
   .navbar-toggler {
     border: 0.4px solid white !important;
   }
-
   .nav-link {
     text-transform: uppercase;
     font-family: "Montserrat', sans-serif";
@@ -404,20 +495,25 @@ nav a:hover {
     color: #fff !important;
     font-size: 20px;
   }
-
   /* fin media query header */
   /* inicio media query main */
   .mainGaleria {
     height: 250vh;
     width: 100%;
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: 0fr 1fr 0fr;
-    grid-template-rows: repeat(12, 1fr);
+    -ms-grid-columns: 0fr 1fr 0fr;
+        grid-template-columns: 0fr 1fr 0fr;
+    -ms-grid-rows: (1fr)[12];
+        grid-template-rows: repeat(12, 1fr);
     padding: 10px;
   }
-
   .foto1 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
     grid-row: 1/3;
     background-image: url(../media/img/IMG_8844.JPG);
     background-size: cover;
@@ -426,9 +522,12 @@ nav a:hover {
     background-size: 400px 300px;
     background-repeat: no-repeat;
   }
-
   .foto2 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 2;
     grid-row: 3/5;
     background-image: url(../media/img/IMG_3476.JPG);
     background-size: cover;
@@ -436,9 +535,12 @@ nav a:hover {
     background-size: 400px 300px;
     background-repeat: no-repeat;
   }
-
   .foto3 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 2;
     grid-row: 5/7;
     background-image: url(../media/img/IMG_1932.jpg);
     background-size: cover;
@@ -446,9 +548,12 @@ nav a:hover {
     background-size: 400px 300px;
     background-repeat: no-repeat;
   }
-
   .foto4 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 7;
+    -ms-grid-row-span: 2;
     grid-row: 7/9;
     background-image: url(../media/img/IMG_9234.JPG);
     background-size: cover;
@@ -456,9 +561,12 @@ nav a:hover {
     background-size: 400px 300px;
     background-repeat: no-repeat;
   }
-
   .foto5 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 9;
+    -ms-grid-row-span: 2;
     grid-row: 9/11;
     background-image: url(../media/img/IMG_3733.JPG);
     background-size: cover;
@@ -466,9 +574,12 @@ nav a:hover {
     background-size: 400px 300px;
     background-repeat: no-repeat;
   }
-
   .foto6 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 11;
+    -ms-grid-row-span: 2;
     grid-row: 11/13;
     background-image: url(../media/img/IMG_2543.JPG);
     background-size: cover;
@@ -476,51 +587,62 @@ nav a:hover {
     background-size: 400px 300px;
     background-repeat: no-repeat;
   }
-
   /* fin media query main */
   /* incio media query footer */
   .foot .cajaDatos {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: wrap column;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: wrap column;
+            flex-flow: wrap column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-
   .foot .cajaDatos .cajaDatos1 {
     text-align: center;
   }
-
   .foot .cajaDatos .cajaDatos1 .nombre {
     margin-right: 5px;
   }
-
   .foot .cajaDatos .cajaDatos1 .datos {
     padding-top: 5px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: wrap column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: wrap column;
+            flex-flow: wrap column;
   }
-
   .foot .cajaDatos .cajaIco {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-top: 15px;
   }
-
   .foot .cajaDatos .cajaCopy {
     padding-top: 10px;
     font-size: 13px;
   }
-
   /* fin media query footer */
 }
+
 @media only screen and (max-width: 380px) {
   .navbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
-
   .mainGaleria {
     height: 200vh;
   }
 }
-
 /*# sourceMappingURL=galeria.css.map */
