--- a/style/index.scss
+++ b/style/index.scss
@@ -9,7 +9,8 @@ $color4:#232323;
 $color5:#ffb510;
 $color6:#e91e63;
 
-
+$font1: "Montserrat', sans-serif";
+$font2: uppercase;
 
 
 *{
@@ -47,18 +48,20 @@ nav{
         display: flex;
         flex-flow: wrap row;
         justify-content:space-evenly;
-            li{
-                list-style: none;
-                margin-left: 30px;
-                display: inline-block;
-                margin-top: 10px;
-                    a {
-                        text-decoration: none !important;
-                        color: $color2;
-                        font-size: 23px;
-                        text-transform: uppercase;
-                        font-family: "Montserrat', sans-serif";
-                        text-shadow: 1px 2px 2px $color1;
+        
+        li{
+            list-style: none;
+            margin-left: 30px;
+            display: inline-block;
+            margin-top: 10px;
+        
+            a {
+                text-decoration: none !important;
+                color: $color2;
+                font-size: 23px;
+                text-transform: $font2;
+                font-family: $font1;
+                text-shadow: 1px 2px 2px $color1;
             }
         }
     }
@@ -79,7 +82,6 @@ nav a:hover{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    /* backface-visibility: hidden; */
     animation: mainIndex 30s linear infinite 4s;
     animation-timing-function: ease-in-out;
 }
@@ -93,36 +95,41 @@ nav a:hover{
     width: 100%;
     background-color: $color1;
     overflow: hidden;
-    font-family: "Montserrat', sans-serif";
-        .cajaDatos{
+    font-family: $font1;
+        
+    .cajaDatos{
             width: 95%;
             margin: auto; 
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             grid-gap: 10px;
             padding: 5px 10px;
-                .cajaIco ul li{
+                
+            .cajaIco ul li{
                     list-style: none;
                     display: inline-block;
-                }
-                .cajaCopy{
-                    text-align: center;
-                    color: $color2;
-                    grid-column: 2/3;
-                    font-size: 17px;
-                    margin-bottom: -15px;
-                }
-                .cajaDatos1 .datos{
-                    display: flex;
-                    flex-flow: wrap row;
-                    justify-content: space-between;
-                    width: 70%;
-                    margin-top: -16px;
-                }
-                .cajaIco{
-                    grid-column: 3/4;
-                    justify-self: end;
-                }
+            }
+                
+            .cajaCopy{
+                text-align: center;
+                color: $color2;
+                grid-column: 2/3;
+                font-size: 17px;
+                margin-bottom: -15px;
+            }
+                
+            .cajaDatos1 .datos{
+                display: flex;
+                flex-flow: wrap row;
+                justify-content: space-between;
+                width: 70%;
+                margin-top: -16px;
+            }
+                
+            .cajaIco{
+                grid-column: 3/4;
+                justify-self: end;
+            }
         }
 }
 
@@ -157,12 +164,6 @@ nav a:hover{
     75%{
         background-image: url(../media/img/IMG_9234.JPG);
     }
-
-        /* 100%{
-            background-image: url(../media/img/IMG_4578.JPG);
-        } */
-
-
 }
 
 
@@ -260,7 +261,7 @@ nav a:hover{
     font-family: 'Lato';
     color: $color2;
     font-size: 12px;
-    text-transform: uppercase;
+    text-transform: $font2;
     letter-spacing: 5px;
 }
 
@@ -452,21 +453,23 @@ header a img{
 header nav{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-        ul{
-            display: flex;
-            flex-flow: wrap column;
-            justify-content: space-between;
-            height: 250px;
-            margin-right: 42px;
-            margin-top: 100px;
-            grid-column: 2/3;
-                li a{
-                    background-color: rgba(12, 12, 12, 0.7);
-                    color: $color2;
-                    text-shadow: 0px 0px 0px $color2;
-                    border: 1px solid #343a40;
-                }
+        
+    ul{
+        display: flex;
+        flex-flow: wrap column;
+        justify-content: space-between;
+        height: 250px;
+        margin-right: 42px;
+        margin-top: 100px;
+        grid-column: 2/3;
+                
+        li a{
+            background-color: rgba(12, 12, 12, 0.7);
+            color: $color2;
+            text-shadow: 0px 0px 0px $color2;
+            border: 1px solid #343a40;
         }
+    }
 }
 
 ul li a:hover{
@@ -480,29 +483,32 @@ ul li a:hover{
     display: flex;
     flex-flow: wrap column;
     justify-content: center;
-        .cajaDatos1{
-            text-align: center;
-                .nombre{
-                    margin-right: 5px;
-                }
-                .datos{
-                    padding-top: 5px;
-                    display: flex;
-                    flex-flow: wrap column;
-                    align-items: center;
-                    width: 100%;
-                }
+        
+    .cajaDatos1{
+        text-align: center;
+
+        .nombre{
+            margin-right: 5px;
         }
-        .cajaIco{
+
+        .datos{
+            padding-top: 5px;
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            padding-top: 15px;
+            flex-flow: wrap column;
+            align-items: center;
+            width: 100%;
         }
-        .cajaCopy{
-            padding-top: 10px;
-            font-size: 13px;
-        }
+    }
+    .cajaIco{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding-top: 15px;
+    }
+    .cajaCopy{
+        padding-top: 10px;
+        font-size: 13px;
+    }
 }
 /* fin query footer */
 
